<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/my_title"
        android:textSize="24sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/textView"
        android:layout_marginTop="15dp"
        android:background="#F08C35"
        android:elevation="8dp"
        android:text="@string/media_steamer"
        android:id="@+id/Button1"
        android:onClick="Button1"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button1"
        android:layout_marginTop="15dp"
        android:background="#F08C35"
        android:elevation="8dp"
        android:text="@string/super_duo1"
        android:id="@+id/Button2"
        android:onClick="Button2"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button2"
        android:layout_marginTop="15dp"
        android:background="#F08C35"
        android:elevation="8dp"
        android:text="@string/super_duo2"
        android:id="@+id/Button3"
        android:onClick="Button3"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button3"
        android:layout_marginTop="15dp"
        android:background="#F08C35"
        android:elevation="8dp"
        android:text="@string/ant_terminator"
        android:id="@+id/Button4"
        android:onClick="Button4"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button4"
        android:layout_marginTop="15dp"
        android:background="#F08C35"
        android:elevation="8dp"
        android:text="@string/materialize"
        android:id="@+id/Button5"
        android:onClick="Button5"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button5"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_red_light"
        android:elevation="8dp"
        android:text="@string/capstone"
        android:id="@+id/Button6"
        android:onClick="Button6"/>
</RelativeLayout>
